Fix: Abrir múltiplos PDFs em nova guia

--- a/src/main/resources/templates/proposta/propostaPdfs.html
+++ b/src/main/resources/templates/proposta/propostaPdfs.html
@@ -21,7 +21,9 @@
 		   	}else{
 			  	window.open(path + "/show/1", "_blank", "");
 		   	}
-	   	window.open("/gtcc/proposta?sucesso=true", "_self" );
+		   	setTimeout(function () {
+		   		window.open("/gtcc/proposta?sucesso=true", "_self");
+		   		}, 200);
 		}
         </script>
 	</section>
