Fix: Editar retornando 0 no ano, calendário

--- a/src/main/resources/templates/agendamentodefesa/index.html
+++ b/src/main/resources/templates/agendamentodefesa/index.html
@@ -38,6 +38,66 @@
 					$subject = $(subject);
 					$($subject.html()).appendTo('body');
 					$subject.remove();
+					console.log('hey', this);
+					$(this).toggleClass('ui-state-active');
+					$(this).attr('data-target', '.bd-example-modal-lg');
+					$(this).attr('data-toggle', 'modal');
+					$('.bd-example-modal-lg').modal('toggle');
+					
+					mes = $(this).parent('td').attr('data-month');
+					ano = $(this).parent('td').attr('data-year');
+					dia = $(this).text();
+					
+					mes = parseInt(mes) + 1;
+					
+					console.log(dia + "-" + mes + "-" + ano);
+					if(dia < 10){
+						dia = "0" + dia;
+					}
+					if(mes < 10){
+						mes = "0" + mes;
+					}
+					var datadefesa = ano+'-0'+mes+'-'+dia;
+					var path0= window.location.href;
+					var path = path0;
+					var n = path0.search("/pesquisar/");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?atualizado=true");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?sucesso=true");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?removido=true");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?sucesso=true?tipo=1");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?sucesso=false&tipo=1");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?atualizado=false");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?sucesso=false");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?removido=false");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+				 	window.open(path + "/pesquisar/"+datadefesa, "_self" );
+					
 					return $('.ui-datepicker-calendar > tbody > tr > td a.ui-state-default').click(stop_it);
 				};
 				window.stop_it = function (e) {
@@ -51,15 +111,125 @@
 					ano = $(this).parent('td').attr('data-year');
 					dia = $(this).text();
 					
-					console.log(dia + "/" + mes + "/" + ano);
+					mes = parseInt(mes) + 1;
 					
+					console.log(dia + "-" + mes + "-" + ano);
+					
+					if(dia < 10){
+						dia = "0" + dia;
+					}
+					if(mes < 10){
+						mes = "0" + mes;
+					}
+					
+					var datadefesa = ano+'-'+mes+'-'+dia;
+					var path0= window.location.href;
+					var path = path0;
+					var n = path0.search("/pesquisar/");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search(/atualizado=true/);
+					if(n != -1){
+						path = path.substring(0, n-1);
+					}
+					n = path0.search(/sucesso=true/);
+					if(n != -1){
+						path = path.substring(0, n-1);
+					}
+					n = path0.search(/removido=true/);
+					if(n != -1){
+						path = path.substring(0, n-1);
+					}
+					n = path0.search(/sucesso=true?tipo=1/);
+					if(n != -1){
+						path = path.substring(0, n-1);
+					}
+					n = path0.search(/sucesso=false&tipo=1/);
+					if(n != -1){
+						path = path.substring(0, n-1);
+					}
+					n = path0.search(/atualizado=false/);
+					if(n != -1){
+						path = path.substring(0, n-1);
+					}
+					n = path0.search(/sucesso=false/);
+					if(n != -1){
+						path = path.substring(0, n-1);
+					}
+					n = path0.search(/removido=false/);
+					if(n != -1){
+						path = path.substring(0, n-1);
+					}
+				 	window.open(path + "/pesquisar/"+datadefesa, "_self" );
 					//e.preventDefault()
 					e.stopPropagation();
 					return false;
 				};
 				just_stop = function (e) {
-					e.stopPropagation();
-					return false;
+					console.log('hey', this);
+					$(this).toggleClass('ui-state-active');
+					$(this).attr('data-target', '.bd-example-modal-lg');
+					$(this).attr('data-toggle', 'modal');
+					$('.bd-example-modal-lg').modal('toggle');
+					
+					mes = $(this).parent('td').attr('data-month');
+					ano = $(this).parent('td').attr('data-year');
+					dia = $(this).text();
+					
+					mes = parseInt(mes) + 1;
+					
+					console.log(dia + "-" + mes + "-" + ano);
+					
+					if(dia < 10){
+						dia = "0" + dia;
+					}
+					if(mes < 10){
+						mes = "0" + mes;
+					}
+					
+					var datadefesa = ano+'-'+mes+'-'+dia;
+					var path0= window.location.href;
+					var path = path0;
+					var n = path0.search("/pesquisar/");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?atualizado=true");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?sucesso=true");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?removido=true");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?sucesso=true?tipo=1");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?sucesso=false&tipo=1");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?atualizado=false");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?sucesso=false");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					n = path0.search("?removido=false");
+					if(n != -1){
+						path = path.substring(0, n);
+					}
+					
+				 	window.open(path + "/pesquisar/"+datadefesa, "_self" );
+					
 				};
 				$('body').on('click', '.ui-datepicker-calendar > tbody > tr > td a.ui-state-default', stop_it);
 				$('.ui-datepicker-calendar > tbody > tr > td a.ui-state-default').click(stop_it);
