--- a/src/main/resources/static/report/ata_defesa.jrxml
+++ b/src/main/resources/static/report/ata_defesa.jrxml
@@ -64,74 +64,74 @@ ATA DE DEFESA PÚBLICA]]></text>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="497">
+		<band height="575">
 			<textField>
-				<reportElement positionType="Float" x="20" y="20" width="520" height="250" uuid="2290a340-6324-4757-aa94-865e7ea9b285"/>
+				<reportElement positionType="Float" x="20" y="20" width="520" height="345" uuid="2290a340-6324-4757-aa94-865e7ea9b285"/>
 				<textElement textAlignment="Justified">
 					<font size="14" isBold="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Em " + $P{data_defesa} + ", às " + $P{horario} + ", reuniu-se na " + $P{local} + ", Campus Sede UEM, Maringá-PR, a banca examinadora composta pelos professors " + $P{nome_orientador} + " (orientador), " + $P{nome_avaliador1} + " (primeiro examinador) e " + $P{nome_avaliador2} + " (segundo examinador) para a defesa do Trabalho de Conclusão de Curso intitulado " + $P{titulo_trabalho} + ", do(a) acadêmico(a) " + $P{nome_aluno} + ". Após a representação do trabalho pelo(a) aluno(a) e a arguição da banca e dos demais presentes, os membros da banca examinadora resolveram atribuir as notas individuais especificadas abaixo, cuja média aritmética simples resultou em ________________________. A coordenadora do TCC determina que o acadêmico entregue a versão final da monografia do Trabalho de Conclusão de Curso até " + $P{data_final_entrega} + ", já corrigida, com as sugestões da banca, em arquivo PDF (Moodle), legível e dentro dos padrões estabelecidos pela coordenação do componente curricular, sob pena de retificação das notas a ele atribuídas."]]></textFieldExpression>
+				<textFieldExpression><![CDATA["No dia " + $P{data_defesa} + ", às " + $P{horario} + ", reuniu-se na " + $P{local} + ", Campus Sede UEM, Maringá-PR, a banca examinadora composta pelos professores " + $P{nome_orientador} + " (orientador), " + $P{nome_avaliador1} + " (primeiro examinador) e " + $P{nome_avaliador2} + " (segundo examinador) para a defesa do Trabalho de Conclusão de Curso intitulado " + $P{titulo_trabalho} + ", do(a) acadêmico(a) " + $P{nome_aluno} + ". Após a apresentação do trabalho pelo(a) aluno(a) e a arguição da banca e dos demais presentes, os membros da banca examinadora resolveram atribuir as notas individuais especificadas abaixo, cuja média aritmética simples resultou em ________________________. O(A) coordenador(a) do TCC determina que o acadêmico entregue a versão final da monografia do Trabalho de Conclusão de Curso até o dia " + $P{data_final_entrega} + ", já corrigida, com as sugestões da banca, em arquivo PDF (Moodle), legível e dentro dos padrões estabelecidos pela coordenação do componente curricular, sob pena de retificação das notas a ele atribuídas."]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement positionType="Float" x="370" y="270" width="159" height="20" uuid="9aec331e-98a1-41ca-93c3-612758d2c305"/>
-				<textElement textAlignment="Center" verticalAlignment="Bottom">
+				<reportElement positionType="Float" x="20" y="365" width="519" height="20" uuid="9aec331e-98a1-41ca-93c3-612758d2c305"/>
+				<textElement textAlignment="Right" verticalAlignment="Bottom">
 					<font size="14" isBold="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Maringá " + $P{data_defesa}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Maringá, " + $P{data_defesa} + "."]]></textFieldExpression>
 			</textField>
 			<rectangle>
-				<reportElement x="20" y="323" width="520" height="140" uuid="173f1352-7d54-42ae-b801-aad23b28605c"/>
+				<reportElement x="19" y="403" width="520" height="140" uuid="173f1352-7d54-42ae-b801-aad23b28605c"/>
 			</rectangle>
 			<rectangle>
-				<reportElement x="281" y="415" width="259" height="23" backcolor="#B5B5B5" uuid="6c4b834c-d3b2-476c-a58a-f4e655b9d551"/>
+				<reportElement x="280" y="495" width="259" height="23" backcolor="#B5B5B5" uuid="6c4b834c-d3b2-476c-a58a-f4e655b9d551"/>
 				<graphicElement>
 					<pen lineColor="#000000"/>
 				</graphicElement>
 			</rectangle>
 			<line>
-				<reportElement x="210" y="323" width="1" height="115" uuid="5c6866ec-cb6e-47f3-b3b9-7baa8f5f7a50"/>
+				<reportElement x="209" y="403" width="1" height="115" uuid="5c6866ec-cb6e-47f3-b3b9-7baa8f5f7a50"/>
 			</line>
 			<line>
-				<reportElement x="280" y="323" width="1" height="140" uuid="23861b57-d270-4207-9677-9b2ed33fb42f"/>
+				<reportElement x="279" y="403" width="1" height="140" uuid="23861b57-d270-4207-9677-9b2ed33fb42f"/>
 			</line>
 			<line>
-				<reportElement x="20" y="340" width="520" height="1" uuid="1f5a3920-93d4-43ea-a527-1adf974a2b64"/>
+				<reportElement x="19" y="420" width="520" height="1" uuid="1f5a3920-93d4-43ea-a527-1adf974a2b64"/>
 			</line>
 			<line>
-				<reportElement x="20" y="438" width="520" height="1" uuid="fd60a6f3-0b07-4f8a-af92-e832ed65a56b"/>
+				<reportElement x="19" y="518" width="520" height="1" uuid="fd60a6f3-0b07-4f8a-af92-e832ed65a56b"/>
 			</line>
 			<line>
-				<reportElement x="20" y="365" width="520" height="1" uuid="915592e5-80dd-485b-abb7-3f1fc8cd0918"/>
+				<reportElement x="19" y="445" width="520" height="1" uuid="915592e5-80dd-485b-abb7-3f1fc8cd0918"/>
 			</line>
 			<line>
-				<reportElement x="20" y="389" width="520" height="1" uuid="73e36886-05d7-4abf-9e3c-73b92e27d79d"/>
+				<reportElement x="19" y="469" width="520" height="1" uuid="73e36886-05d7-4abf-9e3c-73b92e27d79d"/>
 			</line>
 			<line>
-				<reportElement x="20" y="414" width="520" height="1" uuid="01876590-830a-4104-9a10-dc21c85eaa21"/>
+				<reportElement x="19" y="494" width="520" height="1" uuid="01876590-830a-4104-9a10-dc21c85eaa21"/>
 			</line>
 			<staticText>
-				<reportElement x="40" y="323" width="155" height="18" uuid="0e461c90-938c-445f-bbd4-23968f261a53"/>
+				<reportElement x="39" y="403" width="155" height="18" uuid="0e461c90-938c-445f-bbd4-23968f261a53"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
-					<font isBold="true"/>
+					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Membros da Banca]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="227" y="323" width="34" height="18" uuid="a5779690-0089-47c1-b829-4a53717e9fef"/>
+				<reportElement x="226" y="403" width="34" height="18" uuid="a5779690-0089-47c1-b829-4a53717e9fef"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
-					<font isBold="true"/>
+					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Nota]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="281" y="323" width="259" height="18" uuid="6c0e27e6-d09a-4ac1-8e46-52d245aaccea"/>
+				<reportElement x="280" y="403" width="259" height="18" uuid="6c0e27e6-d09a-4ac1-8e46-52d245aaccea"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
-					<font isBold="true"/>
+					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Assinaturas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="81" y="439" width="199" height="24" uuid="f597cc3a-613a-4ae8-9443-10690f3baaa2"/>
+				<reportElement x="80" y="519" width="199" height="24" uuid="f597cc3a-613a-4ae8-9443-10690f3baaa2"/>
 				<textElement textAlignment="Right" verticalAlignment="Bottom" rotation="None">
 					<font size="14" isBold="true"/>
 					<paragraph lineSpacingSize="1.0"/>
@@ -139,7 +139,7 @@ ATA DE DEFESA PÚBLICA]]></text>
 				<text><![CDATA[Ciência do Acadêmico:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="55" y="414" width="154" height="24" uuid="a6b61b22-18da-4e0d-9660-7da6543ef034"/>
+				<reportElement x="54" y="494" width="154" height="24" uuid="a6b61b22-18da-4e0d-9660-7da6543ef034"/>
 				<textElement textAlignment="Right" verticalAlignment="Bottom" rotation="None">
 					<font size="14" isBold="true"/>
 					<paragraph lineSpacingSize="1.0"/>
@@ -147,7 +147,7 @@ ATA DE DEFESA PÚBLICA]]></text>
 				<text><![CDATA[Média:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="21" y="390" width="154" height="24" uuid="052fd0e9-3403-4ed2-92aa-43eb486ab7e0"/>
+				<reportElement x="20" y="470" width="154" height="24" uuid="052fd0e9-3403-4ed2-92aa-43eb486ab7e0"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom" rotation="None">
 					<font size="14" isBold="false"/>
 					<paragraph lineSpacingSize="1.0"/>
@@ -155,7 +155,7 @@ ATA DE DEFESA PÚBLICA]]></text>
 				<text><![CDATA[Segundo Examinador]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="21" y="365" width="154" height="24" uuid="664ec43f-a29f-464f-87f6-fba55aa863f9"/>
+				<reportElement x="20" y="445" width="154" height="24" uuid="664ec43f-a29f-464f-87f6-fba55aa863f9"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom" rotation="None">
 					<font size="14" isBold="false"/>
 					<paragraph lineSpacingSize="1.0"/>
@@ -163,7 +163,7 @@ ATA DE DEFESA PÚBLICA]]></text>
 				<text><![CDATA[Primeiro Examinador]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="21" y="341" width="154" height="24" uuid="b454997e-1c64-40d7-9660-aebcdbf487a0"/>
+				<reportElement x="20" y="421" width="154" height="24" uuid="b454997e-1c64-40d7-9660-aebcdbf487a0"/>
 				<textElement textAlignment="Left" verticalAlignment="Bottom" rotation="None">
 					<font size="14" isBold="false"/>
 					<paragraph lineSpacingSize="1.0"/>
@@ -171,7 +171,7 @@ ATA DE DEFESA PÚBLICA]]></text>
 				<text><![CDATA[Orientador]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="21" y="475" width="519" height="20" uuid="baec5275-3ef8-4a1c-9bdf-7edb7a09940a"/>
+				<reportElement x="20" y="555" width="519" height="20" uuid="baec5275-3ef8-4a1c-9bdf-7edb7a09940a"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle" rotation="None">
 					<font size="12" isBold="false"/>
 					<paragraph lineSpacingSize="1.0"/>
